chore: upgrade to Java 25 and suppress Maven warnings
- Upgrade Maven compiler source/target from Java 21 to 25
- Add MAVEN_OPTS to suppress Guice/Unsafe warnings in build scripts
- Configure VSCode task explorer settings